@@ -100,6 +100,7 @@ loom {
     runs {
         client {
             programArgs(["--username", "Player789"])
+            vmArgs("-XX:+EnableDynamicAgentLoading")
         }
     }
 }
